modify html and css files

--- a/RentAdvisor/RentAdvisor/area_personale.html
+++ b/RentAdvisor/RentAdvisor/area_personale.html
@@ -116,23 +116,111 @@
   </section>
   <!-- End menu section -->
 
-  <!-- Start Property header  -->
-  <section id="aa-property-header">
-    <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-        <div class="aa-property-header-inner">
-            <h2>AREA PERSONALE</h2>
-            <ol class="breadcrumb">
-            <li><a href="#">HOME</a></li>            
-            <li class="active">AREA PERSONALE</li>
-        </ol>
+  <!-- Start slider  -->
+  <section id="aa-slider">
+    <div class="aa-slider-area"> 
+      <!-- Top slider -->
+      <div class="aa-top-slider">
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Milano.jpg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <p class="aa-top-slider-price">AREA PERSONALE</p>
+            <span class="aa-top-slider-off">
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">AREA PERSONALE</li>
+              </ol>
+            </span>
+          </div>
+          <!-- / Top slider content -->
         </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Bologna.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>AREA PERSONALE</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">AREA PERSONALE</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
         </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Ancona.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>AREA PERSONALE</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">AREA PERSONALE</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->       
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Lecce.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>AREA PERSONALE</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">AREA PERSONALE</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->        
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Pescara.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>AREA PERSONALE</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">AREA PERSONALE</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Roma.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>AREA PERSONALE</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">AREA PERSONALE</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
+      </div>
     </div>
-    </div>
-  </section> 
-  <!-- End Property header  -->
+  </section>
+  <!-- End slider  -->
 
   <!-- Start Properties  -->
   <section id="aa-properties">
@@ -309,7 +397,7 @@
               <!-- comment threats -->
               <div class="col-md-12">
               <div class="aa-comments-area">
-                <h3>5 Comments</h3>
+                <h3>2 Comments</h3>
                 <div class="comments">
                   <ul class="commentlist">
                     <li>
@@ -409,7 +497,7 @@
                                         <label for="citta">Città<span class="required">*</span></label>
                                         <input type="text" name="citta" id="citta" value="" size="30" maxlength="50" required="required">
                                     </div>
-                                    <div class="aa-single-fieldd">
+                                    <div class="aa-single-field">
                                         <label for="indirizzo">Indirizzo<span class="required">*</span></label>
                                         <input type="text" name="indirizzo" id="indirizzo" value="" size="30" maxlength="100" required="required">
                                     </div>
@@ -448,7 +536,7 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="aa-footer-left">
-               <p>Designed by <a rel="nofollow" href="http://www.markups.io/">MarkUps.io</a></p>
+               <p>Ideato dal team di RentAdvisor</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -461,11 +549,9 @@
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12">
               <div class="aa-footer-right">
-                <a href="#">Home</a>
-                <a href="#">Support</a>
-                <a href="#">License</a>
-                <a href="#">FAQ</a>
-                <a href="#">Privacy & Term</a>
+                <a href="index.html">Home</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contact.html">Contatti</a>
               </div>
             </div>            
           </div>
