--- a/RentAdvisor/RentAdvisor/contact.html
+++ b/RentAdvisor/RentAdvisor/contact.html
@@ -83,6 +83,7 @@
     </div>
   </header>
   <!-- End header section -->
+
   <!-- Start menu section -->
   <section id="aa-menu-area">
     <nav class="navbar navbar-default main-navbar" role="navigation">  
@@ -114,29 +115,120 @@
   </section>
   <!-- End menu section -->
 
-  <!-- Start Proerty header  -->
-
-  <section id="aa-property-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="aa-property-header-inner">
-            <h2>CONTATTI</h2>
-            <ol class="breadcrumb">
-            <li><a href="index.html">HOME</a></li>            
-            <li class="active">Contatti</li>
-          </ol>
+  <!-- Start slider  -->
+  <section id="aa-slider">
+    <div class="aa-slider-area"> 
+      <!-- Top slider -->
+      <div class="aa-top-slider">
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Milano.jpg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+              <div class="aa-property-header-inner">
+                <h2>CONTATTI</h2>
+                <ol class="breadcrumb">
+                  <li><a href="index.html">HOME</a></li>            
+                  <li class="active">CONTATTI</li>
+                </ol>
+              </div>
           </div>
+          <!-- / Top slider content -->
         </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Bologna.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>CONTATTI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">CONTATTI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Ancona.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>CONTATTI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">CONTATTI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->       
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Lecce.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>CONTATTI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>           
+                <li class="active">CONTATTI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->        
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Pescara.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>CONTATTI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">CONTATTI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Roma.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>CONTATTI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">CONTATTI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
       </div>
     </div>
-  </section> 
-  <!-- End Proerty header  -->
+  </section>
+  <!-- End slider  -->
 
  <section id="aa-contact">
    <div class="container">
      <div class="row">
        <div class="col-md-12">
+          <div class="aa-title">
+            <h2>Pagina dei Contatti</h2>
+            <span></span>
+          </div>
           <div class="aa-contact-area">
             <div class="aa-contact-top">
               <div class="aa-contact-top-left">
