--- a/RentAdvisor/RentAdvisor/faq.html
+++ b/RentAdvisor/RentAdvisor/faq.html
@@ -7,7 +7,7 @@
     <title>RentAdvisor | FAQ</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/home_house.png" type="image/x-icon">
     
     <!-- Font awesome -->
     <link href="css/font-awesome.css" rel="stylesheet">
@@ -70,8 +70,8 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6">
                 <div class="aa-header-right">
-                  <a href="register.html" class="aa-register">Register</a>
-                  <a href="signin.html" class="aa-login">Login</a>
+                  <a href="register.html" class="aa-register">Registrati</a>
+                  <a href="signin.html" class="aa-login">Accedi</a>
                 </div>
               </div>
             </div>
@@ -81,6 +81,7 @@
     </div>
   </header>
   <!-- End header section -->
+
   <!-- Start menu section -->
   <section id="aa-menu-area">
     <nav class="navbar navbar-default main-navbar" role="navigation">  
@@ -112,32 +113,122 @@
   </section>
   <!-- End menu section -->
 
-  <!-- Start Proerty header  -->
-  <section id="aa-property-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="aa-property-header-inner">
-            <h2>Pagina delle FAQ</h2>
-            <ol class="breadcrumb">
-            <li><a href="index.html">HOME</a></li>            
-            <li class="active">FAQ</li>
-          </ol>
+  <!-- Start slider  -->
+  <section id="aa-slider">
+    <div class="aa-slider-area"> 
+      <!-- Top slider -->
+      <div class="aa-top-slider">
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Milano.jpg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+              <div class="aa-property-header-inner">
+                <h2>FAQ</h2>
+                <ol class="breadcrumb">
+                  <li><a href="index.html">HOME</a></li>            
+                  <li class="active">FAQ</li>
+                </ol>
+              </div>
           </div>
+          <!-- / Top slider content -->
         </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Bologna.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>FAQ</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">FAQ</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Ancona.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>FAQ</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">FAQ</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->       
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Lecce.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>FAQ</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">FAQ</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->        
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Pescara.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>FAQ</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">FAQ</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Roma.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>FAQ</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">FAQ</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
       </div>
     </div>
-  </section> 
-  <!-- End Proerty header  -->
+  </section>
+  <!-- End slider  -->
+  
+  <!-- Content FAQ-->
   <section id="aa-blog">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-			<div class="aa-title">
-				<h2>FAQ</h2>
-				<p>Domande frequenti</p>
-				<span></span>
-			</div>
+          <div class="aa-title">
+            <h2>Pagina delle FAQ</h2>
+            <p>Domande frequenti</p>
+            <span></span>
+          </div>
 				<fieldset style="border: 1px solid black; padding-top:40px;">
 				<div class="aa-blog-area">
 				<ol>
@@ -155,7 +246,7 @@
         </div>
     </div>
   </section>
-
+  <!-- / Content FAQ-->
 
   <!-- Footer -->
   <footer id="aa-footer">
