--- a/RentAdvisor/RentAdvisor/register.html
+++ b/RentAdvisor/RentAdvisor/register.html
@@ -50,45 +50,72 @@
             <div class="aa-signin-form">
               <div class="aa-signin-form-title">
                 <h1>Registrazione</h1>
-                <h4>Crea il tuo account e accedi ai servizi </h4>           
+                <h3>Crea il tuo account e accedi ai servizi <br><br></h3>           
               </div>
-              <form class="contactform">  
-                <div class="aa-single-field">
-                  <fieldset>
-                    <label>Proprietario <input type="radio" name="utente" value="prop"> &nbsp;&nbsp;&nbsp;&nbsp; </label>
-                    <label>Studente <input type="radio" name="utente" value="stud" checked> </label>
-                  </fieldset>   
-                </div>                                           
-                <div class="aa-single-field">
-                  <label for="username">Username <span class="required">*</span></label>
-                  <input type="text" required="required" aria-required="true" value="" name="username">
+              <form class="contactform" action="" name="visualizza_profilo" method="get" enctype="multipart/form-data">
+                <div class="aa-properties-content-body">
+                    <ul class="aa-properties-nav">
+                        <li>
+                            <div class="col-xs-6"> <!-- stile bootstrap -->
+                                <div class="aa-single-field">
+                                    <label for="username">Username <span class="required">*</span></label>
+                                    <input type="text" size="30" required="required" aria-required="true" value="" name="username">
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="nome">Nome <span class="required">*</span></label>
+                                    <input type="text" required="required" aria-required="true" value="" name="nome">
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="cognome">Cognome <span class="required">*</span></label>
+                                    <input type="text" size="30" required="required" aria-required="true" value="" name="cognome">
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="email">Email <span class="required">*</span></label>
+                                    <input type="email" size="30" required="required" aria-required="true" value="" name="email">
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="password">Password <span class="required">*</span></label>
+                                    <input type="text" size="30" name="password"> 
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="conferma-password">Conferma Password <span class="required">*</span></label>
+                                    <input type="text" size="30" name="conferma-password"> 
+                                </div>
+                              </div>
+                        </li>                                          
+                        <li>
+                            <div class="col-xs-6">                                           
+                                <div class="aa-single-field">
+                                    <label for="data_nascita">Data nascita <span class="required">*</span></label>
+                                    <input type="text" required="required" aria-required="true" value="" name="data_nascita">
+                                </div>    
+                                <div class="aa-single-field">
+                                    <label for="citta">Città<span class="required">*</span></label>
+                                    <input type="text" name="citta" id="citta" value="" size="30" maxlength="50" required="required">
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="indirizzo">Indirizzo<span class="required">*</span></label>
+                                    <input type="text" name="indirizzo" id="indirizzo" value="" size="30" maxlength="100" required="required">
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="cap">CAP<span class="required">*</span></label>
+                                    <input type="text" name="cap" id="cap" value="" size="30" maxlength="5" required="required">
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="tel">Telefono<span class="required">*</span></label>
+                                    <input type="text" name="tel" id="tel" value="" size="30" maxlength="10" required="required">
+                                </div>
+                                <div class="aa-single-field">
+                                    <label for="gen">Genere<span class="required">*</span></label>
+                                    <input type="text" name="gen" id="gen" value="M/F/ND" size="30" maxlength="1" required="required">
+                                </div> 
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                <div class="aa-single-field">
-                  <label for="nome">Nome <span class="required">*</span></label>
-                  <input type="text" required="required" aria-required="true" value="" name="nome">
-                </div>
-                <div class="aa-single-field">
-                  <label for="cognome">Cognome <span class="required">*</span></label>
-                  <input type="text" required="required" aria-required="true" value="" name="cognome">
-                </div>
-                <div class="aa-single-field">
-                  <label for="data_nascita">Data nascita <span class="required">*</span></label>
-                  <input type="text" required="required" aria-required="true" value="" name="data_nascita">
-                </div>
-                <div class="aa-single-field">
-                  <label for="email">Email <span class="required">*</span></label>
-                  <input type="email" required="required" aria-required="true" value="" name="email">
-                </div>
-                <div class="aa-single-field">
-                  <label for="password">Password <span class="required">*</span></label>
-                  <input type="password" name="password"> 
-                </div>
-                <div class="aa-single-field">
-                  <label for="conferma-password">Conferma Password <span class="required">*</span></label>
-                  <input type="password" name="conferma-password"> 
-                </div>
+
                 <div class="aa-single-submit">
-                  <input type="submit" value="Create Account" name="submit">                    
+                  <input type="submit" value="Registra" name="submit">                    
                 </div>
               </form>
             </div>
