--- a/RentAdvisor/RentAdvisor/catalog.html
+++ b/RentAdvisor/RentAdvisor/catalog.html
@@ -112,40 +112,106 @@
 
     <!-- Start slider  -->
     <section id="aa-slider">
-        <div class="aa-slider-area">
-            <!-- Top slider -->
-            <div class="aa-top-slider">
-                <!-- Top slider single slide -->
-                <div class="aa-top-slider-single">
-                    <img src="img/slider/Milano.jpg" alt="img">
+        <div class="aa-slider-area"> 
+        <!-- Top slider -->
+        <div class="aa-top-slider">
+            <!-- Top slider single slide -->
+            <div class="aa-top-slider-single">
+            <img src="img/slider/Milano.jpg" alt="img">
+            <!-- Top slider content -->
+            <div class="aa-top-slider-content">
+                <div class="aa-property-header-inner">
+                    <h2>CATALOGO</h2>
+                    <ol class="breadcrumb">
+                    <li><a href="index.html">HOME</a></li>            
+                    <li class="active">CATALOGO</li>
+                    </ol>
                 </div>
-                <!-- / Top slider single slide -->
-                <!-- Top slider single slide -->
-                <div class="aa-top-slider-single">
-                    <img src="img/slider/Bologna.jpeg" alt="img">
-                </div>
-                <!-- / Top slider single slide -->
-                <!-- Top slider single slide -->
-                <div class="aa-top-slider-single">
-                    <img src="img/slider/Ancona.jpeg" alt="img">
-                </div>
-                <!-- / Top slider single slide -->
-                <!-- Top slider single slide -->
-                <div class="aa-top-slider-single">
-                    <img src="img/slider/Lecce.jpeg" alt="img">
-                </div>
-                <!-- / Top slider single slide -->
-                <!-- Top slider single slide -->
-                <div class="aa-top-slider-single">
-                    <img src="img/slider/Pescara.jpeg" alt="img">
-                </div>
-                <!-- / Top slider single slide -->
-                <!-- Top slider single slide -->
-                <div class="aa-top-slider-single">
-                    <img src="img/slider/Roma.jpeg" alt="img">
-                </div>
-                <!-- / Top slider single slide -->
             </div>
+            <!-- / Top slider content -->
+            </div>
+            <!-- / Top slider single slide -->
+            <!-- Top slider single slide -->
+            <div class="aa-top-slider-single">
+            <img src="img/slider/Bologna.jpeg" alt="img">
+            <!-- Top slider content -->
+            <div class="aa-top-slider-content">
+                <div class="aa-property-header-inner">
+                <h2>CATALOGO</h2>
+                <ol class="breadcrumb">
+                    <li><a href="index.html">HOME</a></li>            
+                    <li class="active">CATALOGO</li>
+                </ol>
+                </div>
+            </div>
+            <!-- / Top slider content -->
+            </div>
+            <!-- / Top slider single slide -->
+            <!-- Top slider single slide -->
+            <div class="aa-top-slider-single">
+            <img src="img/slider/Ancona.jpeg" alt="img">
+            <!-- Top slider content -->
+            <div class="aa-top-slider-content">
+                <div class="aa-property-header-inner">
+                <h2>CATALOGO</h2>
+                <ol class="breadcrumb">
+                    <li><a href="index.html">HOME</a></li>            
+                    <li class="active">CATALOGO</li>
+                </ol>
+                </div>
+            </div>
+            <!-- / Top slider content -->
+            </div>
+            <!-- / Top slider single slide -->       
+            <!-- Top slider single slide -->
+            <div class="aa-top-slider-single">
+            <img src="img/slider/Lecce.jpeg" alt="img">
+            <!-- Top slider content -->
+            <div class="aa-top-slider-content">
+                <div class="aa-property-header-inner">
+                <h2>CATALOGO</h2>
+                <ol class="breadcrumb">
+                    <li><a href="index.html">HOME</a></li>           
+                    <li class="active">CATALOGO</li>
+                </ol>
+                </div>
+            </div>
+            <!-- / Top slider content -->
+            </div>
+            <!-- / Top slider single slide -->        
+            <!-- Top slider single slide -->
+            <div class="aa-top-slider-single">
+            <img src="img/slider/Pescara.jpeg" alt="img">
+            <!-- Top slider content -->
+            <div class="aa-top-slider-content">
+                <div class="aa-property-header-inner">
+                <h2>CATALOGO</h2>
+                <ol class="breadcrumb">
+                    <li><a href="index.html">HOME</a></li>            
+                    <li class="active">CATALOGO</li>
+                </ol>
+                </div>
+            </div>
+            <!-- / Top slider content -->
+            </div>
+            <!-- / Top slider single slide -->
+            <!-- Top slider single slide -->
+            <div class="aa-top-slider-single">
+            <img src="img/slider/Roma.jpeg" alt="img">
+            <!-- Top slider content -->
+            <div class="aa-top-slider-content">
+                <div class="aa-property-header-inner">
+                <h2>CATALOGO</h2>
+                <ol class="breadcrumb">
+                    <li><a href="index.html">HOME</a></li>            
+                    <li class="active">CATALOGO</li>
+                </ol>
+                </div>
+            </div>
+            <!-- / Top slider content -->
+            </div>
+            <!-- / Top slider single slide -->
+        </div>
         </div>
     </section>
     <!-- End slider  -->
@@ -314,9 +380,34 @@
                     </div>
                 </div>
             </div>
+            <!-- Start properties content bottom -->
+            <div class="aa-properties-content-bottom">
+                <nav>
+                <ul class="pagination">
+                    <li>
+                    <a href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                    </li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li class="active"><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li>
+                    <a href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                    </li>
+                </ul>
+                </nav>
+            </div>
+            <!-- / End properties content bottom -->
         </div>
     </section>
     <!-- / Latest property -->
+
+
 
     <!-- Footer -->
     <footer id="aa-footer">
