--- a/RentAdvisor/RentAdvisor/signin.html
+++ b/RentAdvisor/RentAdvisor/signin.html
@@ -50,10 +50,11 @@
             <div class="aa-signin-form">
               <div class="aa-signin-form-title">
                 <h1>Accedi</h1>
-                <h4>Accedi al tuo profilo per visualizzarne le opzioni</h4>
+                <h3>Accedi al tuo profilo per visualizzarne le opzioni</h3>
               </div>
               <form class="contactform">                                                 
                 <div class="aa-single-field">
+                  <br>
                   <label for="username">Username <span class="required">*</span></label>
                   <input type="text" required="required" aria-required="true" value="" name="username">
                 </div>
@@ -67,7 +68,7 @@
                 </label>                                                          
                 </div> 
                 <div class="aa-single-submit">
-                  <input type="submit" value="Send Message" class="aa-browse-btn" name="submit">  
+                  <input type="submit" value="Accedi" class="aa-browse-btn" name="submit">  
                   <p>Non hai ancora un account? <a href="register.html">Crealo ora!</a></p>
                 </div>
               </form>
