modifica pagina messaggi con relative classi css

--- a/RentAdvisor/RentAdvisor/messaggi.html
+++ b/RentAdvisor/RentAdvisor/messaggi.html
@@ -167,18 +167,14 @@
               </div>
               </fieldset>
 
-              <fieldset style="border: 1px solid black; padding-top:40px;">
                 <div class="aa-blog-area">
-                  <form class="contactform" action="" name="inserimento_messaggio" method="post" enctype="multipart/form-data"> 
-                     <p class="textarea-style">
-                      <textarea name="messaggio" id="messaggio" cols="45" rows="4" maxlength="1000" wrap= "hard"></textarea>
-                     </p>
-                        <p class="send-button">
-                          <input type="button" name="invia" value="Invia">
-                        </p>
+                  <form class="contactform" action="" name="inserimento_messaggio" method="post" enctype="multipart/form-data">
+                    <div style="margin-top: 20px; margin-bottom: 20px"> 
+                      <textarea name="messaggio" class="textarea-style" id="messaggio" cols="45" rows="4" maxlength="1000" wrap= "hard"></textarea>
+                      <input class="send-button" type="button" name="invia" value="Invia">
+                    </div>
                   </form>
                 </div>
-                </fieldset>
           </div>
         </div>
       </div>
