ajust slider in messaggi.html

--- a/RentAdvisor/RentAdvisor/messaggi.html
+++ b/RentAdvisor/RentAdvisor/messaggi.html
@@ -106,7 +106,7 @@
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
             <li><a href="index.html">HOME</a></li>
 			      <li><a href="catalog.html">CATALOGO</a></li>
-            <li class="active"> <a href="">AREA PERSONALE</a></li>
+            <li> <a href="">AREA PERSONALE</a></li>
             <li><a href="contact.html">CONTATTI</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>                           
@@ -116,23 +116,111 @@
   </section>
   <!-- End menu section -->
 
-  <!-- Start Property header  -->
-  <section id="aa-property-header">
-    <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-        <div class="aa-property-header-inner">
-            <h2>MESSAGGI</h2>
-            <ol class="breadcrumb">
-            <li><a href="#">HOME</a></li>            
-            <li class="active">MESSAGGI</li>
-        </ol>
+  <!-- Start slider  -->
+  <section id="aa-slider">
+    <div class="aa-slider-area"> 
+      <!-- Top slider -->
+      <div class="aa-top-slider">
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Milano.jpg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+              <div class="aa-property-header-inner">
+                <h2>MESSAGGI</h2>
+                <ol class="breadcrumb">
+                  <li><a href="index.html">HOME</a></li>            
+                  <li class="active">MESSAGGI</li>
+                </ol>
+              </div>
+          </div>
+          <!-- / Top slider content -->
         </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Bologna.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>MESSAGGI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">MESSAGGI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
         </div>
+        <!-- / Top slider single slide -->
+        <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Ancona.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>MESSAGGI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">MESSAGGI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->       
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Lecce.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>MESSAGGI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>           
+                <li class="active">MESSAGGI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->        
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Pescara.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>MESSAGGI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">MESSAGGI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
+         <!-- Top slider single slide -->
+        <div class="aa-top-slider-single">
+          <img src="img/slider/Roma.jpeg" alt="img">
+          <!-- Top slider content -->
+          <div class="aa-top-slider-content">
+            <div class="aa-property-header-inner">
+              <h2>MESSAGGI</h2>
+              <ol class="breadcrumb">
+                <li><a href="index.html">HOME</a></li>            
+                <li class="active">MESSAGGI</li>
+              </ol>
+            </div>
+          </div>
+          <!-- / Top slider content -->
+        </div>
+        <!-- / Top slider single slide -->
+      </div>
     </div>
-    </div>
-  </section> 
-  <!-- End Property header  -->
+  </section>
+  <!-- End slider  -->
 
 <!-- Section relativa ai messaggi -->
 
@@ -141,7 +229,7 @@
       <div class="col-md-8">
         <div class="aa-title">
           <hr>
-          <h2>MESSAGGI</h2>
+          <h2>Conversazione</h2>
           <span></span>
         </div>
         <div class="aa-properties-content">
